Added support for infinite mines stock and overall per-player limit for planted mines number (for DM servers)

--- a/resource/source-python/translations/tripmines.ini
+++ b/resource/source-python/translations/tripmines.ini
@@ -34,8 +34,12 @@ ru="{color_error}Подождите немного, прежде чем закл
 en="{color_error}Come closer to a solid surface"
 ru="{color_error}Подойдите ближе к прочной поверхности"
 
+[fail too_many]
+en="{color_error}There're too many mines of yours planted already"
+ru="{color_error}Уже заложено достаточно ваших мин"
+
 [mines_left]
-en="{color_default}You have {color_highlight}{mines} mines{color_default}left"
+en="{color_default}You have {color_highlight}{mines} mines {color_default}left"
 ru="{color_default}У вас осталось {color_highlight}{mines} мин"
 
 [announcement]
